@@ -1,3 +1,11 @@
+2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
+	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
+	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
+	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataCollection.cs: Track
+	CompletionData API.
+
 2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* gtk-gui/gui.stetic: Add event and property for accessing errors.
